--- a/1. SQL/001 테이블에서 특정 열(COLUMN) 선택하기.ipynb
+++ b/1. SQL/001 테이블에서 특정 열(COLUMN) 선택하기.ipynb
@@ -34,8 +34,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-31T13:39:29.843687Z",
-     "start_time": "2021-07-31T13:39:22.372545Z"
+     "end_time": "2021-07-31T13:57:51.711057Z",
+     "start_time": "2021-07-31T13:57:44.577982Z"
     }
    },
    "outputs": [
@@ -69,8 +69,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-31T13:40:51.022106Z",
-     "start_time": "2021-07-31T13:40:50.746720Z"
+     "end_time": "2021-07-31T13:57:51.984763Z",
+     "start_time": "2021-07-31T13:57:51.714073Z"
     }
    },
    "outputs": [
@@ -203,8 +203,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-31T13:41:27.357146Z",
-     "start_time": "2021-07-31T13:41:27.171643Z"
+     "end_time": "2021-07-31T13:57:52.180052Z",
+     "start_time": "2021-07-31T13:57:51.986731Z"
     }
    },
    "outputs": [
@@ -357,11 +357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-31T13:48:15.157228Z",
-     "start_time": "2021-07-31T13:48:14.968731Z"
+     "end_time": "2021-07-31T13:57:52.377721Z",
+     "start_time": "2021-07-31T13:57:52.182047Z"
     }
    },
    "outputs": [
@@ -471,7 +471,7 @@
        " ('MILLER', Decimal('1300.00'), None)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,6 +523,8 @@
     "- 들여쓰기('tap 버튼')를 사용해서 SQL의 '가독성'을 높이는 것이 중요!\n",
     "\n",
     "SQL 코딩한 것에서 에러를 찾기에는 '소문자'가 더 좋다! -> 그러니 가급적 소문자로 입력할 것!\n",
+    "\n",
+    "\n",
     "지금은 몇줄 되지 않기 때문에 크게 티가 나지 않지만, 실무에서 여러줄의 코드를 쓰다보면 확연히 차이가 발생한다."
    ]
   },
@@ -530,16 +532,276 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 문제 5. 이름, 직업, 입사일, 부서번호를 출력하시오."
+    "case 1) 한줄로 작성하는 경우"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-31T13:50:48.169573Z",
-     "start_time": "2021-07-31T13:50:47.990399Z"
+     "end_time": "2021-07-31T13:57:52.575557Z",
+     "start_time": "2021-07-31T13:57:52.379709Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://myuser:***@206.189.155.123:5433/dvdrental\n",
+      "11 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>ename</th>\n",
+       "        <th>job</th>\n",
+       "        <th>hiredate</th>\n",
+       "        <th>deptno</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ADAMS</td>\n",
+       "        <td>CLERK</td>\n",
+       "        <td>1983-01-15</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ALLEN</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-02-11</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>BLAKE</td>\n",
+       "        <td>MANAGER</td>\n",
+       "        <td>1981-05-01</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>CLARK</td>\n",
+       "        <td>MANAGER</td>\n",
+       "        <td>1981-05-09</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>FORD</td>\n",
+       "        <td>ANALYST</td>\n",
+       "        <td>1981-12-11</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>JONES</td>\n",
+       "        <td>MANAGER</td>\n",
+       "        <td>1981-04-01</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MARTIN</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-09-10</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MILLER</td>\n",
+       "        <td>CLERK</td>\n",
+       "        <td>1982-01-11</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SCOTT</td>\n",
+       "        <td>ANALYST</td>\n",
+       "        <td>1982-12-22</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>TURNER</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-08-21</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>WARD</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-02-23</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('ADAMS', 'CLERK', datetime.date(1983, 1, 15), Decimal('20')),\n",
+       " ('ALLEN', 'SALESMAN', datetime.date(1981, 2, 11), Decimal('30')),\n",
+       " ('BLAKE', 'MANAGER', datetime.date(1981, 5, 1), Decimal('30')),\n",
+       " ('CLARK', 'MANAGER', datetime.date(1981, 5, 9), Decimal('10')),\n",
+       " ('FORD', 'ANALYST', datetime.date(1981, 12, 11), Decimal('20')),\n",
+       " ('JONES', 'MANAGER', datetime.date(1981, 4, 1), Decimal('20')),\n",
+       " ('MARTIN', 'SALESMAN', datetime.date(1981, 9, 10), Decimal('30')),\n",
+       " ('MILLER', 'CLERK', datetime.date(1982, 1, 11), Decimal('10')),\n",
+       " ('SCOTT', 'ANALYST', datetime.date(1982, 12, 22), Decimal('20')),\n",
+       " ('TURNER', 'SALESMAN', datetime.date(1981, 8, 21), Decimal('30')),\n",
+       " ('WARD', 'SALESMAN', datetime.date(1981, 2, 23), Decimal('30'))]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "select ename, job, hiredate, deptno from emp where sal between 1000 and 3000 order by ename;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "case 2) 아래로 내려 쓰면서 작성하는 경우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-31T13:57:52.774545Z",
+     "start_time": "2021-07-31T13:57:52.577551Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://myuser:***@206.189.155.123:5433/dvdrental\n",
+      "11 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>ename</th>\n",
+       "        <th>job</th>\n",
+       "        <th>hiredate</th>\n",
+       "        <th>deptno</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ADAMS</td>\n",
+       "        <td>CLERK</td>\n",
+       "        <td>1983-01-15</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ALLEN</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-02-11</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>BLAKE</td>\n",
+       "        <td>MANAGER</td>\n",
+       "        <td>1981-05-01</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>CLARK</td>\n",
+       "        <td>MANAGER</td>\n",
+       "        <td>1981-05-09</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>FORD</td>\n",
+       "        <td>ANALYST</td>\n",
+       "        <td>1981-12-11</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>JONES</td>\n",
+       "        <td>MANAGER</td>\n",
+       "        <td>1981-04-01</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MARTIN</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-09-10</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MILLER</td>\n",
+       "        <td>CLERK</td>\n",
+       "        <td>1982-01-11</td>\n",
+       "        <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SCOTT</td>\n",
+       "        <td>ANALYST</td>\n",
+       "        <td>1982-12-22</td>\n",
+       "        <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>TURNER</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-08-21</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>WARD</td>\n",
+       "        <td>SALESMAN</td>\n",
+       "        <td>1981-02-23</td>\n",
+       "        <td>30</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('ADAMS', 'CLERK', datetime.date(1983, 1, 15), Decimal('20')),\n",
+       " ('ALLEN', 'SALESMAN', datetime.date(1981, 2, 11), Decimal('30')),\n",
+       " ('BLAKE', 'MANAGER', datetime.date(1981, 5, 1), Decimal('30')),\n",
+       " ('CLARK', 'MANAGER', datetime.date(1981, 5, 9), Decimal('10')),\n",
+       " ('FORD', 'ANALYST', datetime.date(1981, 12, 11), Decimal('20')),\n",
+       " ('JONES', 'MANAGER', datetime.date(1981, 4, 1), Decimal('20')),\n",
+       " ('MARTIN', 'SALESMAN', datetime.date(1981, 9, 10), Decimal('30')),\n",
+       " ('MILLER', 'CLERK', datetime.date(1982, 1, 11), Decimal('10')),\n",
+       " ('SCOTT', 'ANALYST', datetime.date(1982, 12, 22), Decimal('20')),\n",
+       " ('TURNER', 'SALESMAN', datetime.date(1981, 8, 21), Decimal('30')),\n",
+       " ('WARD', 'SALESMAN', datetime.date(1981, 2, 23), Decimal('30'))]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "%%sql\n",
+    "\n",
+    "select ename, job, hiredate, deptno \n",
+    "    from emp \n",
+    "    where sal between 1000 and 3000 \n",
+    "    order by ename;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 문제 5. 이름, 직업, 입사일, 부서번호를 출력하시오. (비교)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-31T13:57:52.970880Z",
+     "start_time": "2021-07-31T13:57:52.777508Z"
     }
    },
    "outputs": [
@@ -664,7 +926,7 @@
        " ('MILLER', 'CLERK', datetime.date(1982, 1, 11), Decimal('10'))]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
