--- a/1. SQL/SQl 100제 정리/08. 데이터 조회화 필터링_IN연산자.ipynb
+++ b/1. SQL/SQl 100제 정리/08. 데이터 조회화 필터링_IN연산자.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IN절\n",
+    "# IN연산자\n",
     "---\n",
     "\n",
     "- 특정 집합(컬럼 혹은 리스트) 에서 특정 집합 혹은 리스트가 존재하는지 판단할때 사용되는 연산자 이다.\n",
@@ -86,7 +86,7 @@
     "\n",
     "---\n",
     "\n",
-    "IN절은 SUBQUERY와 함께 사용될수도 있는데, 말 그대로 일반적으로 데이터를 불러오는 SQL QUERY에 또 다른 SQL QUERY를 SUB로 사용한다는 것이다.\n",
+    "IN 연산자는 SUBQUERY와 함께 사용될수도 있는데, 말 그대로 일반적으로 데이터를 불러오는 SQL QUERY에 또 다른 SQL QUERY를 SUB로 사용한다는 것이다.\n",
     "\n",
     "```PYTHON\n",
     "select \n",
