--- a/1. SQL/SQl 100제 정리/09. 데이터 조회화 필터링_BETWEEN연산자.ipynb
+++ b/1. SQL/SQl 100제 정리/09. 데이터 조회화 필터링_BETWEEN연산자.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BETWEEN 절\n",
+    "# BETWEEN 연산자\n",
     "\n",
     "- 특정 집합에서 선택한 컬럼의 값이 특정 범위안에 들어가는 집합을 출력하는 연산자\n",
     "- BETWEEN으로 지정한 범위내에 속하는 경우(BETWEEN)과 지정한 범위내에 속하지 않는 경우(NOT BETWEEN)으로 나눠서 사용가능\n",
