--- a/1. SQL/SQl 100제 정리/05. 중간 정리 (01~04 응용 문제).ipynb
+++ b/1. SQL/SQl 100제 정리/05. 중간 정리 (01~04 응용 문제).ipynb
@@ -99,7 +99,7 @@
     "from\n",
     "\trental;\n",
     "```\n",
-    "으로 작성할 경우 rental_date가 시/분/초를 포함하고 있어서 한 날짜에 여러개의 데이터가 중복 출력된다.\n",
+    "으로 작성할 경우 rental_date가 `시/분/초를 포함`하고 있어서 한 날짜에 여러개의 데이터가 중복 출력된다.\n",
     "\n",
     "- 따라서 문제대로 결과값을 출력하려면 rental_date의 중복값을 조건으로 제거해 줘야 한다.\n",
     "- 날짜 데이터의 경우 컬럼 앞에 date(컬럼)이란 기능을 통해 처리가 가능하다."
@@ -1569,9 +1569,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "263.722px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
