--- a/1. SQL/SQl 100제 정리/20. 조인과 집계 데이터_GROUP BY절.ipynb
+++ b/1. SQL/SQl 100제 정리/20. 조인과 집계 데이터_GROUP BY절.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T11:35:02.034358Z",
-     "start_time": "2021-09-03T11:34:54.645631Z"
+     "end_time": "2021-09-03T12:01:14.795139Z",
+     "start_time": "2021-09-03T12:01:07.395734Z"
     }
    },
    "outputs": [
@@ -103,8 +103,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T11:35:02.378438Z",
-     "start_time": "2021-09-03T11:35:02.036353Z"
+     "end_time": "2021-09-03T12:01:15.116347Z",
+     "start_time": "2021-09-03T12:01:14.797106Z"
     }
    },
    "outputs": [
@@ -193,8 +193,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T11:35:02.618794Z",
-     "start_time": "2021-09-03T11:35:02.380434Z"
+     "end_time": "2021-09-03T12:01:15.344572Z",
+     "start_time": "2021-09-03T12:01:15.118313Z"
     }
    },
    "outputs": [
@@ -280,8 +280,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T11:35:02.858155Z",
-     "start_time": "2021-09-03T11:35:02.620790Z"
+     "end_time": "2021-09-03T12:01:15.585935Z",
+     "start_time": "2021-09-03T12:01:15.346568Z"
     }
    },
    "outputs": [
@@ -386,8 +386,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T11:35:03.099510Z",
-     "start_time": "2021-09-03T11:35:02.861147Z"
+     "end_time": "2021-09-03T12:01:15.813548Z",
+     "start_time": "2021-09-03T12:01:15.587926Z"
     }
    },
    "outputs": [
@@ -507,8 +507,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T11:35:03.339890Z",
-     "start_time": "2021-09-03T11:35:03.102501Z"
+     "end_time": "2021-09-03T12:01:16.042540Z",
+     "start_time": "2021-09-03T12:01:15.815513Z"
     }
    },
    "outputs": [
@@ -588,9 +588,10 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T11:35:03.579225Z",
-     "start_time": "2021-09-03T11:35:03.346848Z"
-    }
+     "end_time": "2021-09-03T12:01:16.270081Z",
+     "start_time": "2021-09-03T12:01:16.045531Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -650,6 +651,87 @@
    "metadata": {},
    "source": [
     "- 결제 건수는 직원 1이 더 많았지만, 매출액은 직원2 가 더 많았다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 예제 4. GROUP BY - 여러개의 그룹\n",
+    "\n",
+    "> 예제 3의 결과에 각 직원의 이름을 추가해서 출력하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T12:01:16.511425Z",
+     "start_time": "2021-09-03T12:01:16.273042Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://myuser:***@206.189.155.123:5433/dvdrental\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>staff_id</th>\n",
+       "        <th>staff_name</th>\n",
+       "        <th>payment_count</th>\n",
+       "        <th>total_amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Jon Stephens</td>\n",
+       "        <td>7304</td>\n",
+       "        <td>31059.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Mike Hillyer</td>\n",
+       "        <td>7292</td>\n",
+       "        <td>30252.12</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, 'Jon Stephens', 7304, Decimal('31059.92')),\n",
+       " (1, 'Mike Hillyer', 7292, Decimal('30252.12'))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "select\n",
+    "\tP.STAFF_ID,\n",
+    "\tS.FIRST_NAME || ' ' || S.LAST_NAME as STAFF_NAME,\n",
+    "\tCOUNT(P.PAYMENT_ID) as PAYMENT_COUNT,\n",
+    "\tSUM(P.AMOUNT) as TOTAL_AMOUNT\n",
+    "from\n",
+    "\tPAYMENT P,\n",
+    "\tSTAFF S\n",
+    "where\n",
+    "\tP.STAFF_ID = S.STAFF_ID\n",
+    "group by\n",
+    "\tP.STAFF_ID,\n",
+    "\tS.FIRST_NAME || ' ' || S.LAST_NAME\n",
+    "order by\n",
+    "\tTOTAL_AMOUNT desc;"
    ]
   }
  ],
